# SolisMC-IO

./: CMakeLists.txt  README.md
nbt/: cmake_nbt.cmake  test.cpp
nbt/data/models/: list_value.yml  simple_value.yml  stream.yml  string_value.yml
nbt/data/resources/: byte_cvt.py
nbt/data/values/: 0_byte.yml  0_double.yml  0_float.yml  0_int.yml  0_long.yml  0_short.yml  0_string.yml  1_byte_list.yml  1_float_list.yml
nbt/data/views/: list_struct.hpp  stream_struct.hpp  string_struct.hpp  value_struct.hpp
nbt/include/minecraft/io/nbt/: bytes.hpp  object.hpp  results.hpp
nbt/include/minecraft/io/nbt/bytes/: base.hpp  binding_bedrock.hpp  binding_java.hpp  float.hpp  integral.hpp  interface.hpp  list.hpp  string.hpp
nbt/src/bytes/: common.hpp  float.cpp  integral.cpp  list.cpp  string.cpp
nbt/tests/bytes/: 0_byte.cpp  0_double.cpp  0_float.cpp  0_int.cpp  0_long.cpp  0_short.cpp  0_string.cpp  1_bytelist.cpp  1_floatlist.cpp  _main.cpp  common.hpp  int.cpp
